- updated website with new changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Ambica Associates | Service Faciltator - General Term Insurance</title>
+  <title>Ambika Associates | Service Faciltator - General Term Insurance</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -23,6 +23,7 @@
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.theme.default.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
@@ -59,32 +60,49 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#gallery">Gallery</a></li>
           <li><a href="#services">Services</a></li>
           <li class="drop-down"><a href="">Download</a>
             <ul>
               <li class="drop-down"><a href="#">Claim Form</a>
                 <ul>
-                  <li><a href="./assets/pdf/claim-forms/future-accident-suraksha-claim-form.pdf" target="_blank">Future Accident Suraksha Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/future-motor-claim-form.pdf" target="_blank">Future Motor Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/icici-pa-claim-form.pdf" target="_blank">ICICI Personal Accident Insurance Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/iffco-motor-claim-form.pdf" target="_blank">IFFCO Motor Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/liberty-claim form-Private Car and  Two Wheeler.pdf" target="_blank">Liberty Claim Form (Car / Two Wheeler)</a></li>
-                  <li><a href="./assets/pdf/claim-forms/reliance-healthwise-claim-form.pdf" target="_blank">Reliance Healthwise Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/reliance-motor-claim-form.pdf" target="_blank">Reliance Motor Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/reliance-travel-claim-form-a.pdf" target="_blank">Reliance Travel Claim Form - A</a></li>
+                  <li><a href="./assets/pdf/claim-forms/future-accident-suraksha-claim-form.pdf" target="_blank">Future
+                      Accident Suraksha Claim Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/future-motor-claim-form.pdf" target="_blank">Future Motor Claim
+                      Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/icici-pa-claim-form.pdf" target="_blank">ICICI Personal Accident
+                      Insurance Claim Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/iffco-motor-claim-form.pdf" target="_blank">IFFCO Motor Claim
+                      Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/liberty-claim form-Private Car and  Two Wheeler.pdf"
+                      target="_blank">Liberty Claim Form (Car / Two Wheeler)</a></li>
+                  <li><a href="./assets/pdf/claim-forms/reliance-healthwise-claim-form.pdf" target="_blank">Reliance
+                      Healthwise Claim Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/reliance-motor-claim-form.pdf" target="_blank">Reliance Motor
+                      Claim Form</a></li>
+                  <!-- <li><a href="./assets/pdf/claim-forms/reliance-travel-claim-form-a.pdf" target="_blank">Reliance Travel Claim Form - A</a></li>
                   <li><a href="./assets/pdf/claim-forms/reliance-travel-claim-form-c.pdf" target="_blank">Reliance Travel Claim Form - C</a></li>
-                  <li><a href="./assets/pdf/claim-forms/reliance-travel-claim-main-form.pdf" target="_blank">Reliance Travel Main Claim Form</a></li>
-                  <li><a href="./assets/pdf/claim-forms/universal-sompo-claim-form.pdf" target="_blank">Universal Sompo Claim Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/reliance-travel-claim-main-form.pdf" target="_blank">Reliance Travel Main Claim Form</a></li> -->
+                  <li><a href="./assets/pdf/claim-forms/universal-sompo-claim-form.pdf" target="_blank">Universal Sompo
+                      Claim Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/(Tata)-Medi-Series-Sep22.pdf" target="_blank">Tata Medi Series</a></li>
+                  <li><a href="./assets/pdf/claim-forms/care-claimform-(RELIGARE).pdf" target="_blank">Care Claim Form (RELIGARE)</a></li>
+                  <li><a href="./assets/pdf/claim-forms/care-neft-mandate-form(Religare).pdf" target="_blank">Care Neft Mandate Form (RELIGARE)</a></li>
+                  <li><a href="./assets/pdf/claim-forms/HDFC-Health-claim-form.pdf" target="_blank">HDFC Health Claim Form</a></li>
+                  <li><a href="./assets/pdf/claim-forms/fire-claim-form-new-india.pdf" target="_blank">Fire Claim Form New India</a></li>
+                  <li><a href="./assets/pdf/claim-forms/KYC-4.pdf" target="_blank">KYC</a></li>
+
                 </ul>
               </li>
               <li class="drop-down"><a href="#">Proposal Form</a>
                 <ul>
                   <li><a href="./assets/pdf/proposal-forms/bajaj-gpg-form.pdf" target="_blank">Bajaj GPG Form </a></li>
-                  <li><a href="./assets/pdf/proposal-forms/bajaj-ppg-form.pdf" target="_blank">Bajaj PPG Form</a></li>
-                  <li><a href="./assets/pdf/proposal-forms/bajaj-sankat-mochan.pdf" target="_blank">Bajaj Sankat Mochan Form</a></li>
-                  <li><a href="./assets/pdf/proposal-forms/oriental-self-declaration.PDF" target="_blank">Oriental Self Declaration</a></li>
-                  <li><a href="./assets/pdf/proposal-forms/portability-oic.PDF" target="_blank">Portability  OIC</a></li>
-                  <li><a href="./assets/pdf/proposal-forms/tata-aig-medi-plus.pdf" target="_blank">TATA AIG Medi Plus</a></li>
+                  <!-- <li><a href="./assets/pdf/proposal-forms/bajaj-ppg-form.pdf" target="_blank">Bajaj PPG Form</a></li>
+                  <li><a href="./assets/pdf/proposal-forms/bajaj-sankat-mochan.pdf" target="_blank">Bajaj Sankat Mochan Form</a></li> -->
+                  <li><a href="./assets/pdf/proposal-forms/oriental-self-declaration.PDF" target="_blank">Oriental Self
+                      Declaration</a></li>
+                  <li><a href="./assets/pdf/proposal-forms/portability-oic.PDF" target="_blank">Portability OIC</a></li>
+                  <!-- <li><a href="./assets/pdf/proposal-forms/tata-aig-medi-plus.pdf" target="_blank">TATA AIG Medi Plus</a></li>
                   <li><a href="./assets/pdf/proposal-forms/tata-aig-medi-prime.pdf" target="_blank">TATA AIG Medi Prime</a></li>
                   <li><a href="./assets/pdf/proposal-forms/tata-aig-travel.pdf" target="_blank">TATA AIG Travel Form</a></li>
                   <li><a href="./assets/pdf/proposal-forms/united-family-medicare.pdf" target="_blank">United Family Medicare Proposal Form</a></li>
@@ -93,7 +111,7 @@
                   <li><a href="./assets/pdf/proposal-forms/united-marine-proposal.PDF" target="_blank">United Marine Proposal Form</a></li>
                   <li><a href="./assets/pdf/proposal-forms/united-money-insurance.pdf" target="_blank">United Money Insurance</a></li>
                   <li><a href="./assets/pdf/proposal-forms/unites-shopkeepers-insurance.pdf" target="_blank">United Shopkeepers Insurance</a></li>
-                  <li><a href="./assets/pdf/proposal-forms/unite-standard-fire-spl-form.pdf" target="_blank">United Standard Fire &amp; Special Perils Policy</a></li>
+                  <li><a href="./assets/pdf/proposal-forms/unite-standard-fire-spl-form.pdf" target="_blank">United Standard Fire &amp; Special Perils Policy</a></li> -->
                 </ul>
               </li>
             </ul>
@@ -108,7 +126,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container" data-aos="zoom-out" data-aos-delay="100">
-      <h1>Welcome to <span>Ambica Associates</spa>
+      <h1>Welcome to <span>Ambika Associates</spa>
       </h1>
       <h2>Individual Clients- Customized product & service offering-- is our business motive.. once u Come to us for
         your General insurance need—it will be start of new family relation with us..U will be part of our ever Growing
@@ -135,9 +153,9 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up"
             data-aos-delay="100">
-            <h3 class="mb-2">Why Ambica Associates ?</h3>
+            <h3 class="mb-2">Why Ambika Associates ?</h3>
             <p>
-              We at Ambica Associates, are professionally qualified in field of insurance and having Direct licensing,
+              We at Ambika Associates, are professionally qualified in field of insurance and having Direct licensing,
               which ensure Credibility and promptness in service with in-detail knowledge of Product, service and
               constant updates from the field, we ensure 100% service satisfaction
             </p>
@@ -190,6 +208,80 @@
 
     </section><!-- End About Section -->
 
+    <!-- ======= Gallery Section ======= -->
+    <section id="gallery" class="gallery">
+      <div class="container" data-aos="fade-up">
+        <ul class="list-group owl-carousel owl-theme">
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-1.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-1.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-2.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-2.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-3.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-3.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-4.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-4.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-5.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-5.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-6.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-6.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-7.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-7.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-8.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-8.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-9.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-9.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-10.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-10.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-11.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-11.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-12.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-12.jpg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-13.jpg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-13.jpg" alt="Gallery Image">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- End Gallery Section -->
+
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
@@ -239,12 +331,14 @@
 
         <div class="section-title">
           <h3>Our <span>Services</span></h3>
-          <p class="mb-1">From the General insurance Segment across All the market operators.. We offer following for need of our
+          <p class="mb-1">From the General insurance Segment across All the market operators.. We offer following for
+            need of our
             clients.. </p>
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Mediclaim</a></h4>
@@ -386,7 +480,7 @@
   <footer id="footer">
     <div class="container py-4">
       <div class="copyright">
-        &copy; Copyright <strong><span>Ambica Associates</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Ambika Associates</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
