--- a/index.html
+++ b/index.html
@@ -243,18 +243,18 @@
             </a>
           </li>
           <li class="list-group-item">
-            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-7.jpg">
-              <img class="img-fluid" src="./assets/img/gallery/gallery-img-7.jpg" alt="Gallery Image">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-7.png">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-7.png" alt="Gallery Image">
             </a>
           </li>
           <li class="list-group-item">
-            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-8.jpg">
-              <img class="img-fluid" src="./assets/img/gallery/gallery-img-8.jpg" alt="Gallery Image">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-8.png">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-8.png" alt="Gallery Image">
             </a>
           </li>
           <li class="list-group-item">
-            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-9.jpg">
-              <img class="img-fluid" src="./assets/img/gallery/gallery-img-9.jpg" alt="Gallery Image">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-9.png">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-9.png" alt="Gallery Image">
             </a>
           </li>
           <li class="list-group-item">
@@ -263,18 +263,33 @@
             </a>
           </li>
           <li class="list-group-item">
-            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-11.jpg">
-              <img class="img-fluid" src="./assets/img/gallery/gallery-img-11.jpg" alt="Gallery Image">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-11.png">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-11.png" alt="Gallery Image">
             </a>
           </li>
           <li class="list-group-item">
-            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-12.jpg">
-              <img class="img-fluid" src="./assets/img/gallery/gallery-img-12.jpg" alt="Gallery Image">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-12.jpeg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-12.jpeg" alt="Gallery Image">
             </a>
           </li>
           <li class="list-group-item">
-            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-13.jpg">
-              <img class="img-fluid" src="./assets/img/gallery/gallery-img-13.jpg" alt="Gallery Image">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-13.jpeg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-13.jpeg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-14.jpeg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-14.jpeg" alt="Gallery Image">
+            </a>
+          </li>
+           <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-15.jpeg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-15.jpeg" alt="Gallery Image">
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a class="venobox gallery-img" data-gall="myGallery" href="./assets/img/gallery/gallery-img-16.jpeg">
+              <img class="img-fluid" src="./assets/img/gallery/gallery-img-16.jpeg" alt="Gallery Image">
             </a>
           </li>
         </ul>
@@ -408,7 +423,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>Thaltej, Ahmedabad</p>
+              <p>Ambika Associates Office #1011, 10th floor Elite Magnum Building Beside: Solaris business Hub, Bhuyangdev cross Road, Sola Road, Ahmedabad: 380061</p>
             </div>
           </div>
 
@@ -433,9 +448,7 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12">
-            <iframe class="mb-4 mb-lg-0"
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58736.86795918414!2d72.47010014427164!3d23.058472693200564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e9ca1402b2107%3A0xc6b7cfd374cb4bcb!2sThaltej%2C%20Ahmedabad%2C%20Gujarat!5e0!3m2!1sen!2sin!4v1593437989862!5m2!1sen!2sin"
-              frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3671.056170088116!2d72.5383126!3d23.0584022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e85c3f9da812d%3A0x709134c089b36!2sELITE%20MAGNUM%20ADINATH%20CORPORATION!5e0!3m2!1sen!2sin!4v1692455159651!5m2!1sen!2sin" width=100% height="380px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <!-- <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
